avoid scrollbars in LanguageGui-Header for tablets and MacBooks
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@36792 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/web-styles.css
+++ b/web/src/geogebra/resources/css/web-styles.css
@@ -4018,7 +4018,8 @@ PROVIDERS
 /* +++ BrowseGUI CONTENT +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++*/
 
 /* to avoid scrollbars on tablets and mac */
-.browsegui > div:nth-child(1), .browsegui > div:nth-child(1) > div {
+.browsegui > div:nth-child(1), .browsegui > div:nth-child(1) > div,
+.languageGUI > div:nth-child(1), .languageGUI > div:nth-child(1) > div {
 	overflow: hidden !important;
 }
 
